samples/_failures_safe/1761144033_d8f5b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f24d9c24.c: In function ‘main’:
./samples/SAFE/__tmp_f24d9c24.c:163:16: error: missing terminating " character
  163 |         printf("Matrix multiplication failed
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f24d9c24.c:163:9: error: expected expression at end of input
  163 |         printf("Matrix multiplication failed
      |         ^~~~~~
./samples/SAFE/__tmp_f24d9c24.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f24d9c24.c:163:9: error: expected declaration or statement at end of input
